import { beforeEach, describe, expect, it, vi } from 'vitest'
import stripAnsi from 'strip-ansi'

import logger from '../../../lib/logger'
import { renderTapFailure } from '../../../lib/tap/output'
import { TAP_ERROR_COPY, TapError, type TapErrorCode, type TapErrorCopy, invalidValueTapError, missingCompanionOptionTapError, notFoundTapError, specInProgressTapError, tapErrorCopy, unknownCommandTapError, unknownOptionTapError } from '@packages/cypress-instances'

// The catalogue of every user-facing `cypress tap` failure. Adding or rewording one
// should land here as a snapshot diff.
//
// These snapshots hold the registry copy alone — the condition and the remedy. What
// a caller sees also carries the specifics from the throw site; the rendering
// assertions below cover the assembled shape.

describe('lib/tap error registry', () => {
  const entries: [string, TapErrorCopy][] = Object.entries(TAP_ERROR_COPY)

  it('covers exactly these codes (add a case below for any new entry)', () => {
    expect(Object.keys(TAP_ERROR_COPY).sort()).toMatchInlineSnapshot(`
      [
        "AMBIGUOUS_COMMAND",
        "ATTEMPT_NOT_FOUND",
        "BINDING_NOT_FOUND",
        "BINDING_THREW",
        "CDP_UNREACHABLE",
        "CLI_OUTDATED",
        "COMMAND_NOT_FOUND",
        "FRAME_READ_FAILED",
        "GRAPHQL_FAILED",
        "GRAPHQL_UNREACHABLE",
        "INSTANCE_NOT_FOUND",
        "INSTANCE_OUTDATED",
        "INVALID_ARGUMENTS",
        "INVALID_OPTIONS",
        "INVALID_PAYLOAD",
        "INVALID_VALUE",
        "MISSING_COMPANION_OPTION",
        "NO_AUT",
        "NO_BROWSER_ATTACHED",
        "NO_INSTANCE",
        "NO_PROJECT",
        "PIN_TARGET_REQUIRED",
        "PROTOCOL_MISMATCH",
        "RENDERER_UNRESPONSIVE",
        "SNAPSHOT_NOT_FOUND",
        "SNAPSHOT_UNAVAILABLE",
        "SPEC_IN_PROGRESS",
        "SPEC_NOT_FOUND",
        "SPEC_NOT_STARTED",
        "SPEC_START_FAILED",
        "STALE_HANDLE",
        "STALE_INSTANCE",
        "TESTING_TYPE_NOT_CONFIGURED",
        "TEST_NOT_FOUND",
        "UNKNOWN_COMMAND",
        "UNKNOWN_OPTION",
      ]
    `)
  })

  it('reads as one voice across every entry', () => {
    const rendered = entries
    .filter(([, copy]) => copy.description || copy.solution)
    .sort(([a], [b]) => a.localeCompare(b))
    .map(([code, copy]) => [code, copy.description, copy.solution].filter(Boolean).join('\n  '))
    .join('\n\n')

    expect(rendered).toMatchSnapshot()
  })

  // These conditions open by naming their subject, so there is no generic sentence
  // to hold here and their factory writes that line. Every other entry states its
  // condition, whether or not a factory raises it.
  it('holds no condition only for the codes whose opening line names its subject', () => {
    const copyless = entries
    .filter(([, copy]) => !copy.description)
    .map(([code]) => code)

    expect(copyless.sort()).to.deep.eq(['MISSING_COMPANION_OPTION', 'SPEC_IN_PROGRESS', 'UNKNOWN_COMMAND', 'UNKNOWN_OPTION'])
  })

  // Every entry is copy a caller reads, so the house rules apply to all of them at
  // once rather than one assertion per entry. A solution is optional — an entry
  // whose specifics carry the remedy, as INVALID_VALUE's do, ships without one.
  it('states each condition and remedy as a finished sentence', () => {
    const offenders = entries.flatMap(([code, copy]) => {
      return (['description', 'solution'] as const)
      .filter((slot) => copy[slot] !== undefined)
      .filter((slot) => !/^[`A-Z]/.test(copy[slot]!) || !/[.?]$/.test(copy[slot]!))
      .map((slot) => `${code}.${slot}`)
    })

    expect(offenders).to.deep.eq([])
  })

  it('leaves the specifics to the throw site, never interpolating them', () => {
    const interpolated = entries
    .filter(([, copy]) => `${copy.description}${copy.solution}`.includes('${'))
    .map(([code]) => code)

    expect(interpolated).to.deep.eq([])
  })

  it('links only through on.cypress.io, as a path the CLI resolves', () => {
    const offenders = entries
    .filter(([, copy]) => `${copy.description}${copy.solution}${copy.docs ?? ''}`.includes('docs.cypress.io'))
    .map(([code]) => code)

    expect(offenders).to.deep.eq([])
  })
})

describe('lib/tap error registry lookup', () => {
  it('resolves a code it ships', () => {
    expect(tapErrorCopy('NO_INSTANCE')).to.eq(TAP_ERROR_COPY.NO_INSTANCE)
  })

  // The code arrives from the instance over the wire, so anything that is not a code
  // this CLI ships has to land somewhere rather than resolving to nothing — or, for
  // an inherited name, to a member of Object.prototype.
  it('falls back to the protocol-mismatch copy, plus a report, for a code only a newer Cypress knows', () => {
    const copy = tapErrorCopy('SOMETHING_THIS_CLI_HAS_NEVER_HEARD_OF')

    expect(copy.description).to.eq(TAP_ERROR_COPY.PROTOCOL_MISMATCH.description)
    expect(copy.recommendGhIssue).to.be.true
  })

  it('falls back for an inherited name rather than a prototype member', () => {
    for (const name of ['constructor', 'toString', '__proto__', 'hasOwnProperty']) {
      expect(tapErrorCopy(name), name).to.eq(tapErrorCopy('NOT_A_CODE'))
    }
  })

  it('falls back for a code that is not a string at all', () => {
    for (const value of [undefined, null, 42, {}, [], true]) {
      expect(tapErrorCopy(value), String(value)).to.eq(tapErrorCopy('NOT_A_CODE'))
    }
  })
})

describe('lib/tap error rendering', () => {
  const stderr = (): string => stripAnsi(vi.mocked(console.error).mock.calls.flat().join(' '))

  beforeEach(() => {
    logger.reset()
    vi.spyOn(console, 'error').mockImplementation(() => {})
  })

  const render = async (code: string, detail?: string): Promise<string> => {
    await renderTapFailure({ code, detail })

    return stderr()
  }

  // The code is a registry key, not output: it selects the copy and never reaches
  // the reader.
  it('never prints the error code', async () => {
    for (const code of Object.keys(TAP_ERROR_COPY)) {
      vi.mocked(console.error).mockClear()

      expect(await render(code), code).not.to.contain(code)
    }
  })

  // The condition, then the specifics that explain it, then what to do about it —
  // as paragraphs, with nothing between them to separate.
  it('lays a failure out as condition, specifics, remedy', async () => {
    const printed = await render('INSTANCE_NOT_FOUND', 'Looked for `--instance` 999.')

    expect(printed).to.eq([
      TAP_ERROR_COPY.INSTANCE_NOT_FOUND.description,
      'Looked for --instance 999.',
      TAP_ERROR_COPY.INSTANCE_NOT_FOUND.solution!.replace(/`/g, ''),
    ].join('\n\n'))
  })

  // A tap failure is about the state of a running instance, not about which Cypress
  // is installed or the machine it runs on.
  it('carries no rule and no platform footer', async () => {
    const printed = await render('NO_INSTANCE')

    expect(printed).not.to.contain('----------')
    expect(printed).not.to.contain('Cypress Version:')
    expect(printed).not.to.contain('Platform:')
  })

  // The one shape every unusable value is reported in, whichever option or argument
  // carried it and whichever side of the wire rejected it.
  it('reports a bad value as what was expected and what arrived', async () => {
    const printed = await render('INVALID_VALUE', invalidValueTapError('--max-chars', 'a positive integer', 'bogus').detail)

    expect(printed).to.eq('An invalid value was given.\n\nExpected --max-chars to be a positive integer.\n\nInstead the value was: "bogus"')
  })

  // Both open by naming what was given, and close with the listing that answers it —
  // whatever named the real ones where the failure was noticed.
  it('reports an unknown command as the name given, then the listing', async () => {
    const printed = await render('UNKNOWN_COMMAND', unknownCommandTapError('oel2k', 'Commands:\n  instances\n  status').detail)

    expect(printed).to.eq('Unknown command "oel2k"\n\nCommands:\n  instances\n  status')
  })

  it('reports an unknown option as the flag given, then the listing', async () => {
    const printed = await render('UNKNOWN_OPTION', unknownOptionTapError('--bogus', 'Usage: cypress tap dom [options]').detail)

    expect(printed).to.eq('Unknown option "--bogus"\n\nUsage: cypress tap dom [options]')
  })

  // The lookups answer the same way, whether they searched a spec or the machine:
  // what was not found, the option and value that named nothing, then where the real
  // ones are listed.
  it('reports a lookup that matched nothing in one shape, whichever id it was', async () => {
    expect(await render('TEST_NOT_FOUND', notFoundTapError('TEST_NOT_FOUND', '--test-id', 'r7').detail)).to.eq([
      'No test in this spec matched that id.',
      'Looked for --test-id "r7".',
      'Run cypress tap reporter to list the tests in the spec.',
    ].join('\n\n'))

    vi.mocked(console.error).mockClear()

    expect(await render('COMMAND_NOT_FOUND', notFoundTapError('COMMAND_NOT_FOUND', '--command-id', '9').detail)).to.eq([
      'No command in this test matched that id.',
      'Looked for --command-id "9".',
      'Run cypress tap reporter --test-id <id> to list the commands in the test.',
    ].join('\n\n'))

    vi.mocked(console.error).mockClear()

    // A pid is a number, so it reads without quotes where an id reads with them.
    expect(await render('INSTANCE_NOT_FOUND', notFoundTapError('INSTANCE_NOT_FOUND', '--instance', 4321).detail)).to.eq([
      'No running Cypress matched that process id.',
      'Looked for --instance 4321.',
      'Run cypress tap instances to list the sessions you can tap into.',
    ].join('\n\n'))
  })

  // What narrows the search rides along with the value: how many attempts there
  // are is what makes a rejected number actionable.
  it('carries the context a lookup has, when it has any', async () => {
    const detail = notFoundTapError('ATTEMPT_NOT_FOUND', '--attempt', 5, 'Test "r2" has 3 attempts.').detail

    expect(await render('ATTEMPT_NOT_FOUND', detail)).to.contain('Looked for --attempt 5. Test "r2" has 3 attempts.')
  })

  // The spec is what a poller waits on, so the condition names it and the remedy
  // says how to tell when it has finished.
  it('reports a run in progress as the spec running, then how to watch it', async () => {
    const printed = await render('SPEC_IN_PROGRESS', specInProgressTapError('cypress/e2e/slow.cy.js').detail)

    expect(printed).to.eq('The spec cypress/e2e/slow.cy.js is currently running.\n\nUse cypress tap status to verify when the spec has finished.')
  })

  it('expands recommendGhIssue into the CLI\'s standard issue block', async () => {
    const printed = await render('BINDING_THREW')

    expect(printed).to.contain('search for an existing issue or open a GitHub issue at')
    expect(printed).to.contain('https://github.com/cypress-io/cypress/issues')
  })

  it('leaves the issue block off an entry that does not ask for it', async () => {
    expect(await render('NO_INSTANCE')).not.to.contain('github.com/cypress-io/cypress/issues')
  })

  it('expands docs into a Learn more block under the docs site', async () => {
    const printed = await render('TESTING_TYPE_NOT_CONFIGURED')

    expect(printed).to.contain('Learn more:')
    expect(printed).to.contain('https://on.cypress.io/configuration')
  })

  // Both slots carry backticked commands, so the markup has to be stripped from
  // both — a description keeping its backticks is the way this has gone wrong.
  it('strips the markup from every entry, whichever slot carries it', async () => {
    for (const code of Object.keys(TAP_ERROR_COPY)) {
      vi.mocked(console.error).mockClear()

      expect(await render(code), code).not.to.contain('`')
    }
  })

  it('keeps unwinding an error that is not ours to render', async () => {
    await expect(renderTapFailure(new Error('not a tap failure'))).rejects.toThrow('not a tap failure')
  })
})

// Every code, rendered end to end as a caller sees it: the registry copy assembled
// with the specifics a real throw site writes. One snapshot per code, so a change
// to any failure's assembled output lands as a reviewable diff under its name.
describe('lib/tap error rendering catalogue', () => {
  beforeEach(() => {
    logger.reset()
    vi.spyOn(console, 'error').mockImplementation(() => {})
  })

  // One realistic failure per code — factory-raised codes through their factory,
  // the rest as their throw sites raise them: with the detail the site writes, or
  // bare where it writes none, since that bare rendering is the real output. Each
  // entry names the throw site its specifics are copied from; a code raised in
  // several places names the one the representative mimics.
  // `Record<TapErrorCode, ...>` makes a new registry entry a compile error here
  // until it gets a representative.
  const REPRESENTATIVE: Record<TapErrorCode, TapError> = {
    // cli/lib/cypress-instances/index.ts (resolveInstance)
    NO_INSTANCE: new TapError('NO_INSTANCE'),
    // cli/lib/cypress-instances/index.ts (resolveInstance)
    INSTANCE_NOT_FOUND: notFoundTapError('INSTANCE_NOT_FOUND', '--instance', 4321),
    // cli/lib/cypress-instances/index.ts (liveMatches)
    STALE_INSTANCE: new TapError('STALE_INSTANCE', { detail: 'Looked for `--instance` 4321.' }),
    // cli/lib/cypress-instances/index.ts (resolveInstance)
    NO_BROWSER_ATTACHED: new TapError('NO_BROWSER_ATTACHED', { detail: 'The instance is pid 4321, at /home/dev/shop.' }),
    // cli/lib/tap/cdp-timeout.ts
    RENDERER_UNRESPONSIVE: new TapError('RENDERER_UNRESPONSIVE', { detail: 'No response within the specified timeout (30000ms).' }),
    // cli/lib/tap/tap-session.ts
    CDP_UNREACHABLE: new TapError('CDP_UNREACHABLE'),
    // cli/lib/tap/tap-session.ts
    BINDING_NOT_FOUND: new TapError('BINDING_NOT_FOUND'),
    // cli/lib/tap/tap-session.ts
    BINDING_THREW: new TapError('BINDING_THREW'),
    // cli/lib/tap/tap-session.ts
    STALE_HANDLE: new TapError('STALE_HANDLE'),
    // cli/lib/tap/tap-session.ts (validateExecResult); also the schema handshake in cli/lib/exec/tap.ts
    PROTOCOL_MISMATCH: new TapError('PROTOCOL_MISMATCH'),
    // cli/lib/exec/tap.ts (schema handshake)
    CLI_OUTDATED: new TapError('CLI_OUTDATED'),
    // cli/lib/exec/tap.ts (schema handshake); also cli/lib/tap/instance-gql.ts
    INSTANCE_OUTDATED: new TapError('INSTANCE_OUTDATED'),
    // cli/lib/tap/instance-gql.ts
    GRAPHQL_UNREACHABLE: new TapError('GRAPHQL_UNREACHABLE'),
    // cli/lib/tap/instance-gql.ts
    GRAPHQL_FAILED: new TapError('GRAPHQL_FAILED'),
    // cli/lib/tap/aut/frame.ts; also the app-side commands in packages/app/src/tap/commands/
    SPEC_NOT_STARTED: new TapError('SPEC_NOT_STARTED'),
    // cli/lib/tap/aut/frame.ts; also packages/app/src/tap/commands/pin.ts
    SPEC_IN_PROGRESS: specInProgressTapError('cypress/e2e/checkout.cy.ts'),
    // cli/lib/tap/commands/run.ts
    SPEC_START_FAILED: new TapError('SPEC_START_FAILED', { detail: 'The instance returned no result for "cypress/e2e/checkout.cy.ts".' }),
    // cli/lib/tap/commands/run.ts
    SPEC_NOT_FOUND: new TapError('SPEC_NOT_FOUND', { detail: 'Looked for "cypress/e2e/checkout.cy.ts".' }),
    // cli/lib/tap/commands/run.ts (mapped from the runSpec mutation's failure)
    NO_PROJECT: new TapError('NO_PROJECT'),
    // cli/lib/tap/commands/run.ts (mapped from the runSpec mutation's failure)
    TESTING_TYPE_NOT_CONFIGURED: new TapError('TESTING_TYPE_NOT_CONFIGURED'),
    // cli/lib/tap/aut/frame.ts; also packages/app/src/tap/commands/resolve-selector.ts
    NO_AUT: new TapError('NO_AUT'),
    // cli/lib/tap/aut/single-match.ts; also the dom/inspect extractors
    FRAME_READ_FAILED: new TapError('FRAME_READ_FAILED'),
    // packages/app/src/tap/test-state.ts
    TEST_NOT_FOUND: notFoundTapError('TEST_NOT_FOUND', '--test-id', 'r7'),
    // packages/app/src/tap/test-state.ts
    ATTEMPT_NOT_FOUND: notFoundTapError('ATTEMPT_NOT_FOUND', '--attempt', 5, 'Test "r7" has 3 attempts.'),
    // packages/app/src/tap/commands/command.ts; also pin.ts
    COMMAND_NOT_FOUND: notFoundTapError('COMMAND_NOT_FOUND', '--command-id', '9'),
    // packages/app/src/tap/test-state.ts
    AMBIGUOUS_COMMAND: new TapError('AMBIGUOUS_COMMAND', { detail: '"3" matches h2:3 (before each) and r4:3 — e.g. "h2:3".' }),
    // packages/app/src/tap/commands/pin.ts
    SNAPSHOT_NOT_FOUND: notFoundTapError('SNAPSHOT_NOT_FOUND', '--at', 'middle', 'This command has: before, after.'),
    // packages/app/src/tap/commands/pin.ts
    SNAPSHOT_UNAVAILABLE: new TapError('SNAPSHOT_UNAVAILABLE', { detail: 'The app under test did not take the pin.' }),
    // packages/app/src/tap/commands/pin.ts
    PIN_TARGET_REQUIRED: new TapError('PIN_TARGET_REQUIRED'),
    // packages/app/src/tap/tap-manager.ts; also cli/lib/tap/build-program.ts
    UNKNOWN_COMMAND: unknownCommandTapError('oel2k', 'This Cypress (v15.4.0) offers: status, specs, run, dom, reporter.'),
    // cli/lib/tap/build-program.ts; also packages/app/src/tap/exec-args.ts
    UNKNOWN_OPTION: unknownOptionTapError('--bogus', 'Usage: cypress tap dom [options]'),
    // packages/app/src/tap/exec-args.ts
    INVALID_ARGUMENTS: new TapError('INVALID_ARGUMENTS', { detail: '"run" is missing the required <spec> argument(s).\n\nUsage: cypress tap run <spec>' }),
    // packages/app/src/tap/exec-args.ts
    INVALID_OPTIONS: new TapError('INVALID_OPTIONS', { detail: '"reporter" is missing the required --test-id option.\n\nUsage: cypress tap reporter [options]' }),
    // cli/lib/tap/aut/single-match.ts; also packages/app/src/tap/commands/reporter.ts
    MISSING_COMPANION_OPTION: missingCompanionOptionTapError('--at', '--selector', 'Pass `--selector` to choose the elements to index into, or omit `--at` to read the whole document.'),
    // packages/app/src/tap/tap-manager.ts
    INVALID_PAYLOAD: new TapError('INVALID_PAYLOAD', { detail: '"dom" received a non-object args payload, rather than one keyed by name.' }),
    // cli/lib/tap/aut/single-match.ts; also packages/app/src/tap/exec-args.ts
    INVALID_VALUE: invalidValueTapError('--at', '0 to 2, since ".item" matched 3 elements', '5'),
  }

  // The Record type already forces this at compile time; asserting it too makes a
  // drift fail as a test rather than only as a type error.
  it('holds one representative failure for every code', () => {
    expect(Object.keys(REPRESENTATIVE).sort()).to.deep.eq(Object.keys(TAP_ERROR_COPY).sort())
  })

  for (const code of Object.keys(TAP_ERROR_COPY) as TapErrorCode[]) {
    it(`renders ${code} as a caller sees it`, async () => {
      await renderTapFailure(REPRESENTATIVE[code])

      expect(stripAnsi(vi.mocked(console.error).mock.calls.flat().join(' '))).toMatchSnapshot()
    })
  }
})
